fixed button's z-index

--- a/src/sass/sections/meditation.scss
+++ b/src/sass/sections/meditation.scss
@@ -114,7 +114,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
+    z-index: 4;
   }
 }
 
